[gd_scene load_steps=9 format=2]

[ext_resource path="res://Tileset/Objeto_Rompible.gd" type="Script" id=2]
[ext_resource path="res://Shaders/Blink.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="Animation" id=3]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start2"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Stop2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Objeto_Rompible" type="StaticBody2D"]
collision_layer = 2147483649
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start1 = SubResource( 3 )
anims/Start2 = SubResource( 4 )
anims/Stop1 = SubResource( 5 )
anims/Stop2 = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Objeto_Rompible" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objeto_Rompible"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Objeto_Rompible" to="." method="_on_Area2D_area_entered"]
